# Visomics

./: .gitignore  ABOUT  CMakeLists.txt  CTestConfig.cmake  NOTICE  README  SuperBuild.cmake  voConfigure.h.in  voTestConfigure.h.in
Application/: CMakeLists.txt  Main.cpp  voAboutDialog.cpp  voAboutDialog.h  voAboutDialog_Arbor.cpp  voAboutDialog_Arbor.h  voAnalysisParameterDialog.cpp  voAnalysisParameterDialog.h  voAnalysisParameterEditorWidget.cpp  voAnalysisParameterEditorWidget.h  voDataBrowserWidget.cpp  voDataBrowserWidget.h  voDataPropertyWidget.cpp  voDataPropertyWidget.h  voDelimitedTextImportDialog.cpp  voDelimitedTextImportDialog.h  voDelimitedTextImportWidget.cpp  voDelimitedTextImportWidget.h  voDelimitedTextPreview.cpp  voDelimitedTextPreview.h  voDelimitedTextPreviewModel.cpp  voDelimitedTextPreviewModel.h  voMainWindow.cpp  voMainWindow.h  voMongoLoadDialog.cpp  voMongoLoadDialog.h  voMongoSaveDialog.cpp  voMongoSaveDialog.h  voNormalizationWidget.cpp  voNormalizationWidget.h  voOpenTreeLoadDialog.cpp  voOpenTreeLoadDialog.h  voQtTesting.cpp  voQtTesting.h  voRemoteAnalysisConnectionDialog.cpp  voRemoteAnalysisConnectionDialog.h  voStartupView.cpp  voStartupView.h  voViewStackedWidget.cpp  voViewStackedWidget.h  (+2 more)
Application/Resources/: VisomicsApp.qrc  VisomicsApp.rc
Application/Resources/UI/: voAnalysisPanel.ui  voDelimitedTextImportDialog.ui  voDelimitedTextImportWidget.ui  voMainWindow.ui  voMainWindow_Arbor.ui  voMongoLoadDialog.ui  voMongoSaveDialog.ui  voOpenTreeLoadDialog.ui  voRemoteAnalysisConnectionDialog.ui
Application/Testing/: CMakeLists.txt
Application/Testing/Cpp/: CMakeLists.txt  voDataBrowserWidgetTest.cpp  voDelimitedTextImportDialogTest.cpp  voDelimitedTextImportWidgetTest.cpp
Application/Testing/XML/: CMakeLists.txt  TestANOVA.xml  TestFOLD.xml  TestGeigerFitContinuous.xml  TestHierarchicalClustering.xml  TestKMEANS.xml  TestOneZoom.xml  TestPCA.xml  TestPLS.xml  TestReadWriteWorkflow.xml  TestTTest.xml  TestTreeDropTip.xml  TestTreeDropTipInverted.xml  TestTreeDropTipWithoutData.xml  TestTreeDropTipWithoutDataInverted.xml  TestXCorrel.xml
Base/: CMakeLists.txt  Main.cpp  voAnalysis.cpp  voAnalysis.h  voAnalysisDriver.cpp  voAnalysisDriver.h  voAnalysisFactory.cpp  voAnalysisFactory.h  voAnalysisParameterEditorWidget.h  voApplication.cpp  voApplication.h  voCSVReader.cpp  voDataBrowserWidget.h  voDataModel.cpp  voDataModel.h  voDataModelItem.cpp  voDataModelItem.h  voDataModel_p.h  voDataObject.cpp  voDataObject.h  voDelimitedTextImportSettings.cpp  voDelimitedTextImportSettings.h  voDynView.cpp  voDynView.h  voIOManager.cpp  voIOManager.h  voInputFileDataObject.cpp  voInputFileDataObject.h  voJavascriptBridge.cpp  voJavascriptBridge.h  voKEGGUtils.cpp  voKEGGUtils.h  voNormalizerRegistry.cpp  voNormalizerRegistry.h  voOutputDataObject.cpp  voOutputDataObject.h  voQObjectFactory.h  voRegistry.cpp  voRegistry.h  voSoapClient.cpp  (+16 more)
Base/Analysis/: voANOVAStatistics.cpp  voANOVAStatistics.h  voCompareTrees.cpp  voCompareTrees.h  voCustomAnalysis.cpp  voCustomAnalysis.h  voCustomAnalysisData.cpp  voCustomAnalysisData.h  voCustomAnalysisInformation.cpp  voCustomAnalysisInformation.h  voCustomAnalysisParameter.cpp  voCustomAnalysisParameter.h  voCustomAnalysisParameterField.cpp  voCustomAnalysisParameterField.h  voFoldChange.cpp  voFoldChange.h  voGeigerModelFitting.cpp  voGeigerModelFitting.h  voHierarchicalClustering.cpp  voHierarchicalClustering.h  voKEGG.cpp  voKEGG.h  voKEGGCompounds.cpp  voKEGGCompounds.h  voKEGGPathway.cpp  voKEGGPathway.h  voKMeansClustering.cpp  voKMeansClustering.h  voOneZoom.cpp  voOneZoom.h  voPCAStatistics.cpp  voPCAStatistics.h  voPLSStatistics.cpp  voPLSStatistics.h  voRemoteCustomAnalysis.cpp  voRemoteCustomAnalysis.h  voTTest.cpp  voTTest.h  voTreeDropTip.cpp  voTreeDropTip.h  (+4 more)
Base/Normalization/: voLog2.cpp  voLog2.h  voNormalization.h  voQuantile.cpp
Base/Resources/: ArborBase.qrc  VisomicsBase.qrc
Base/Resources/Icons/: ArborIcon.icns  VisomicsIcon.icns
Base/Resources/UI/: voMainWindow.ui
Base/Testing/Cpp/: CMakeLists.txt  voAnalysisTest.cpp  voApplicationTest.cpp  voCVSReaderTest.cpp  voCheckR_HOMETest.cpp  (+4 more)
Base/Views/: voChartXY.cpp  voChartXY.h  voCorrelationGraphView.cpp  voCorrelationGraphView.h  voCorrelationHeatMapView.cpp  voCorrelationHeatMapView.h  voExtendedTableView.cpp  voExtendedTableView.h  voHeatMapView.cpp  voHeatMapView.h  voHierarchicalClusteringDynView.cpp  voHierarchicalClusteringDynView.h  voHierarchicalClusteringHeatMapView.cpp  voHierarchicalClusteringHeatMapView.h  voHorizontalBarView.cpp  voHorizontalBarView.h  voInteractorStyleRubberBand2D.cpp  voInteractorStyleRubberBand2D.h  voKEGGImageView.cpp  voKEGGImageView.h  voKEGGPathwayView.cpp  voKEGGPathwayView.h  voKEGGTableView.cpp  voKEGGTableView.h  voKMeansClusteringDynView.cpp  voKMeansClusteringDynView.h  voOneZoomDynView.cpp  voOneZoomDynView.h  voPCABarPlot.cpp  voPCABarPlot.h  voPCABarView.cpp  voPCABarView.h  voPCAProjectionDynView.cpp  voPCAProjectionDynView.h  voPCAProjectionPlot.cpp  voPCAProjectionPlot.h  voPCAProjectionView.cpp  voPCAProjectionView.h  voTableView.cpp  voTableView.h  (+6 more)
Sources/: CMakeLists.txt  Main.cpp  voAnalysis.cpp  voAnalysis.h  voAnalysisDriver.cpp  voAnalysisDriver.h  voAnalysisFactory.cpp  voAnalysisPanel.cxx  voAnalysisPanel.h  voAnalysisParameterEditorWidget.cpp  voApplication.cpp  voApplication.h  voCSVReader.cpp  voCSVReader.h  voCorrelationGraphView.cpp  voCorrelationGraphView.h  voDataBrowserWidget.cpp  voDataBrowserWidget.h  voDataModel.cpp  voDataModel.h  voDataModelItem.cpp  voDataModelItem.h  voDataModel_p.h  voDataObject.cpp  voDataObject.h  voHierarchicalClustering.cpp  voHierarchicalClustering.h  voIOManager.cpp  voIOManager.h  voKMeansClustering.cpp  voKMeansClustering.h  voMainWindow.cpp  voMainWindow.h  voMainWindow.ui  voPCA.cpp  voPCA.h  voPCABarPlot.cpp  voPCAProjectionPlot.cpp  voPCAProjectionPlot.h  voPCAStatistics.cpp  (+17 more)
Sources/Analysis/: voHierarchicalClustering.h
Sources/Resources/: Visomics.qrc
Sources/Views/: voPCAProjectionPlot.cpp  voTreeGraphView.h
(+88 files in other folders)
